Centers hambuger menu vertically and fixes spacing in mobile nav

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -112,6 +112,13 @@
         display: none;
     }
 
+    &__menu-toggle {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 1rem;
+    }
+
     &__content {
         width: 100%;
         height: 100%;
@@ -142,10 +149,11 @@
         position: absolute;
         width: 250px;
         height: 100vh;
+        top: 1rem;
+        left: 3rem;
         box-shadow: 0 0 10px #85888C;
-        margin: -50px 0 0 -50px;
-        padding: 50px;
-        padding-top: 125px;
+        margin: -3.125rem 0 0 -3.125rem;
+        padding: 7.8125rem 2.5rem 2.5rem 2rem;
         background-color: #F5F6FA;
         -webkit-font-smoothing: antialiased;
         transform-origin: 0% 0%;
@@ -154,7 +162,7 @@
     }
 
     &__list-item {
-        padding: 10px 0;
+        padding: 0.625rem 0;
         transition-delay: 2s;
         font-size: .80rem;
         list-style-type: none;
